# sync-app

./: .gitignore  CLI_USAGE.md  Cargo.toml  Cross.toml  DOCUMENTATION_SUMMARY.md  LICENSE  PACKAGING.md  POCKETBASE_API_CLIENT_SUMMARY.md  README.md  SETUP_SUMMARY.md  TESTING.md  UI_IMPLEMENTATION_SUMMARY.md  book.toml  cli-config.toml  cli-config.toml.example  daemon-config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
daemon/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
daemon/examples/: daemon-config.toml  daemon-config.toml.example
daemon/src/: config.rs  daemon.rs  main.rs  scheduler.rs  service.rs  telemetry.rs  watcher.rs
docs/: README.md  SUMMARY.md  TELEMETRY.md  configuration.md  deployment.md  quick-start.md  troubleshooting.md
docs/examples/: bidirectional-cron.md  one-way-mirror.md  watcher-demo.md
packaging/chocolatey/: sync-app.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/debian/: build-deb.sh
packaging/homebrew/: sync-app.rb
packaging/rpm/: build-rpm.sh  sync-app.spec
pocketbase/: setup.ps1  setup.sh
scripts/: build-docs.sh  build-release.sh  create-release.sh  package-all.sh
sync/: Cargo.toml  README.md
sync-cli/: Cargo.toml
sync-cli/src/: main.rs
sync-core/: Cargo.toml
sync-core/examples/: api_usage.rs
sync-core/src/: lib.rs
sync-core/src/api/: README.md  auth.rs  client.rs  crud.rs  error.rs  mod.rs  realtime.rs  types.rs
sync-server/: Cargo.toml  build.rs
sync-server/src/: main.rs
sync/examples/: basic_sync.rs
sync/src/: comparator.rs  conflict.rs  conflict_tests.rs  diff.rs  diff_tests.rs  error.rs  filter.rs  filter_tests.rs  integration_tests.rs  lib.rs  metrics.rs  path_property_tests.rs  preservation.rs  progress.rs  scanner.rs  sync_engine.rs
test_source/: readme.md
ui/: Cargo.toml  README.md
ui/src/: events.rs  main.rs  types.rs  ui.rs  websocket.rs
