[package]
name = "sync-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command line interface for sync application"

[[bin]]
name = "sync"
path = "src/main.rs"

[dependencies]
sync-core = { path = "../sync-core" }
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs = "5.0"
