[package]
name = "sync-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core synchronization library"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
url.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true
base64.workspace = true
thiserror.workspace = true
backoff.workspace = true
serde_urlencoded.workspace = true
tracing-subscriber.workspace = true
