[package]
name = "sync-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Server component for sync application"

[[bin]]
name = "sync-server"
path = "src/main.rs"

[dependencies]
sync-core = { path = "../sync-core" }
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
anyhow = "1.0"
