[package]
name = "sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sync engine library for directory synchronization"

[dependencies]
# Async runtime and filesystem operations
tokio.workspace = true
tokio-util = "0.7"

# Directory scanning and file operations
walkdir = "2.4"
ignore = "0.4"
fs_extra = "1.3"

# File filtering with glob patterns
globset = "0.4"

# Hashing and cryptography
sha2 = "0.10"
blake3 = "1.5"

# File metadata and time operations
filetime = "0.2"
utime = "0.3"

# Progress reporting and channels
futures = "0.3"

# Serialization and error handling
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror = "1.0"

# Logging
tracing.workspace = true

# Utility crates
bytes = "1.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

# Unix system calls (Unix only)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
test-log = "0.2"
tracing-subscriber = "0.3"
proptest = "1.4"
proptest-derive = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
rstest = "0.18"
test-case = "3.3"
serial_test = "3.0"

[[example]]
name = "basic_sync"
required-features = []
